k8s/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atonixcorp
spec:
  tls:
    - hosts:
        - app.staging.atonixcorp.com
      secretName: atonixcorp-staging-tls
  rules:
    - host: app.staging.atonixcorp.com
